fix desktop-navbar, and club-artwork-list name overflow

--- a/src/app/club-artwork-list/club-artwork-list.module.scss
+++ b/src/app/club-artwork-list/club-artwork-list.module.scss
@@ -9,7 +9,7 @@
         gap: 34px;
         flex: 1;
 
-        @media screen and (max-width: 1024px) {
+        @media screen and (max-width: 1200px) { // issue occured when screenwidth is 1025~1100px
             flex-direction: column;
             gap: 17px;
             align-items: center;
@@ -28,10 +28,12 @@
             width: 100%;
 
             .name {
-                width: 627px;  
-                @media screen and (max-width: 1024px) {
-                    width: 100%;
-                }      
+                @media screen and (min-width: 1241px) {
+                    width: 627px;
+                }
+                //@media screen and (max-width: 1240px) {
+                //    width: 100%;
+                //}      
             }
         }
     }
