--- a/src/app/top-navbar/desktop-navbar.module.scss
+++ b/src/app/top-navbar/desktop-navbar.module.scss
@@ -13,7 +13,7 @@ nav.navbar {
     height: 128px;
     box-sizing: border-box;
 
-    padding: 0px 70px 0px 148px;
+    padding: 0px 70px 0px 5%;
 
     a {
         text-decoration: none;
